chore: add TypeScript linting and fix hook dependencies
Add ESLint configuration for TypeScript:
- Install eslint@8, @typescript-eslint/parser, @typescript-eslint/eslint-plugin
- Configure Next.js ESLint with next/core-web-vitals preset
- Add Python linting scripts (lint:py, lint:py:fix) to root package.json

Fix React hooks warning:
- Wrap performSearch in useCallback in search page
- Add proper dependency array to fix exhaustive-deps warning

All linting checks now pass with no errors or warnings.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "build": "turbo run build",
     "start": "turbo run start",
     "lint": "turbo run lint",
+    "lint:py": "cd apps/api && ruff check . && ruff format --check .",
+    "lint:py:fix": "cd apps/api && ruff check . --fix && ruff format .",
     "clean": "turbo run clean"
   },
   "devDependencies": {
