--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,21 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdxeditor/editor": "^3.11.0",
+    "lucide-react": "^0.400.0",
     "next": "^15.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "@mdxeditor/editor": "^3.11.0",
     "react-markdown": "^9.0.0",
     "remark-gfm": "^4.0.0",
     "remark-mermaid": "^0.2.0",
     "shiki": "^1.0.0",
-    "zustand": "^5.0.0",
-    "lucide-react": "^0.400.0"
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@typescript-eslint/eslint-plugin": "^8.47.0",
+    "@typescript-eslint/parser": "^8.47.0",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.33",
     "typescript": "^5"
   }
 }
