--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,7 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mdxeditor/editor": "^3.11.0",
+    "@codemirror/autocomplete": "^6.20.0",
+    "@codemirror/commands": "^6.10.0",
+    "@codemirror/lang-markdown": "^6.5.0",
+    "@codemirror/language": "^6.11.3",
+    "@codemirror/state": "^6.5.2",
+    "@codemirror/view": "^6.38.8",
+    "@lezer/highlight": "^1.2.3",
     "lucide-react": "^0.400.0",
     "next": "^15.5.0",
     "react": "^19.0.0",
@@ -26,8 +32,11 @@
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^8.47.0",
     "@typescript-eslint/parser": "^8.47.0",
+    "autoprefixer": "^10.4.22",
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.2.33",
+    "postcss": "^8.5.6",
+    "tailwindcss": "3",
     "typescript": "^5"
   }
 }
