--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^19.0.0",
     "react-markdown": "^9.0.0",
     "remark-gfm": "^4.0.0",
+    "remark-github-blockquote-alert": "^2.0.0",
     "remark-mermaid": "^0.2.0",
     "shiki": "^1.0.0",
     "zustand": "^5.0.0"
