feat: add toast notification system
- Install react-hot-toast package
- Create ToastProvider component with custom styling
- Add provider to root layout for global availability
- Configure 4-second duration and top-right positioning
- Style toasts to match app's flat design system

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,6 +20,7 @@
     "next": "^15.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.6.0",
     "react-markdown": "^9.0.0",
     "remark-gfm": "^4.0.0",
     "remark-github-blockquote-alert": "^2.0.0",
