--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,9 @@
     "@codemirror/state": "^6.5.2",
     "@codemirror/view": "^6.38.8",
     "@lezer/highlight": "^1.2.3",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.400.0",
     "next": "^15.5.0",
     "react": "^19.0.0",
@@ -26,6 +29,7 @@
     "remark-github-blockquote-alert": "^2.0.0",
     "remark-mermaid": "^0.2.0",
     "shiki": "^1.0.0",
+    "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
