--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,6 +17,7 @@
     "@codemirror/view": "^6.38.8",
     "@lezer/highlight": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-context-menu": "^2.2.16",
     "@radix-ui/react-dialog": "^1.1.15",
     "clsx": "^2.1.1",
     "lucide-react": "^0.400.0",
