feat: add multi-repository support with GitHub integration
Implement complete multi-repository management system allowing users to
manage multiple GitHub repositories from a single WikiGit instance.

Backend changes:
- Add GitHub API service for repository scanning and authentication
- Add repository service for CRUD operations and metadata management
- Add multi-repo git service for git operations across repositories
- Add sync scheduler for automatic repository synchronization
- Add repositories router with 7 new endpoints
- Update search service to support multi-repository indexing
- Add repository utilities for common operations
- Update settings with GitHub and multi-repository configuration

Frontend changes:
- Add admin panel with repository management interface
- Add GitHub settings configuration component
- Add repository scanner with search and selection
- Add repository list with status and controls
- Add repository nodes in sidebar with two-level hierarchy
- Add read-only enforcement in article viewer and editor
- Update API client with repository-aware methods
- Update sidebar to display repositories and prevent cross-repo operations

Features:
- Scan GitHub user repositories via Personal Access Token
- Clone public and private repositories
- Enable/disable repositories individually
- Mark repositories as read-only to prevent modifications
- Manual and automatic repository synchronization
- Per-repository search indexing
- Lock icons and tooltips for read-only repositories
- Repository deletion with cleanup of local files

Configuration:
- Repositories default to disabled and read-only on addition
- GitHub settings persisted to config.yaml
- In-memory settings reload for immediate configuration updates
- Example configuration with comprehensive documentation

--- a/config.yaml.example
+++ b/config.yaml.example
@@ -8,7 +8,7 @@ app:
     - admin@example.com
     - editor@example.com
 
-# Git repository settings
+# Git repository settings (single-repository mode)
 repository:
   repo_path: /home/mauro/projects/wikigit/wiki-content
   default_branch: main
@@ -19,3 +19,40 @@ repository:
 # Search settings
 search:
   index_dir: /home/mauro/projects/wikigit/data/search-index
+
+# Multi-repository settings (optional)
+# Enable this to manage multiple GitHub repositories in one wiki
+multi_repository:
+  enabled: false  # Set to true to enable multi-repository mode
+
+  # Directory where all repository clones will be stored
+  repositories_root_dir: /home/mauro/projects/wikigit/wiki-repositories
+
+  # Auto-sync interval in minutes (pulls remote changes, pushes local changes)
+  auto_sync_interval_minutes: 15
+
+  # GitHub integration settings
+  github:
+    # Environment variable name containing your GitHub Personal Access Token (PAT)
+    # Create a PAT at: https://github.com/settings/tokens
+    # Required scopes: repo (for private repos) or public_repo (for public repos only)
+    token_env_var: GITHUB_TOKEN
+
+    # Your GitHub username (used to scan for accessible repositories)
+    user_id: ""  # Example: "octocat"
+
+  # List of configured repositories (managed via admin panel)
+  # Do not edit manually - use the admin panel to add/remove repositories
+  repositories: []
+  # Example repository configuration:
+  # - id: owner/repo-name
+  #   name: repo-name
+  #   owner: owner
+  #   remote_url: https://github.com/owner/repo-name.git
+  #   local_path: owner/repo-name
+  #   enabled: true
+  #   read_only: true
+  #   default_branch: main
+  #   last_synced: null
+  #   sync_status: never
+  #   error_message: null
