--- a/apps/api/pyproject.toml
+++ b/apps/api/pyproject.toml
@@ -14,6 +14,8 @@ dependencies = [
     "aiofiles>=24.1.0",
     "python-multipart>=0.0.17",
     "pyyaml>=6.0.2",
+    "httpx>=0.27.0",
+    "apscheduler>=3.10.4",
 ]
 
 [build-system]
