refactor: remove legacy single-repository mode, multi-repo only
Remove all legacy single-repository code and settings. WikiGit now
operates exclusively in multi-repository mode.

BREAKING CHANGES:
- Removed RepositorySettings class from settings
- Deleted legacy routers: articles.py, directories.py, media.py
- Legacy endpoints no longer available (/api/articles, /api/directories, /api/media)
- All operations now require repository context via /api/repositories/{repo_id}/*

Backend changes:
- Add author_name, author_email, default_branch to MultiRepositorySettings
- Remove RepositorySettings class and all references
- Update all services to use multi_repository settings
- Refactor GitService to accept individual parameters instead of RepositorySettings
- Update MultiRepoGitService to use refactored GitService
- Remove legacy repo initialization from main.py startup
- Update search.py to multi-repo mode only
- Update config.py to remove repository settings exposure
- Update repository_utils.py to require repository_id (no fallbacks)
- Delete legacy routers entirely

Configuration changes:
- Remove repository section from config.yaml.example
- Update user config.yaml with multi_repository settings
- Set multi_repository.enabled default to true
- Add author_name, author_email, default_branch to multi_repository config

Schema changes:
- Remove RepositoryConfig model from ConfigUpdate
- Update ConfigData to only include app_name, admins, index_dir
- Remove repository fields from configuration API responses

Files deleted:
- apps/api/app/routers/articles.py (350+ lines)
- apps/api/app/routers/directories.py (400+ lines)
- apps/api/app/routers/media.py (350+ lines)

Migration required:
- Users must update config.yaml to use multi_repository section
- All API clients must update to use repository-scoped endpoints
- No backward compatibility or automatic migration provided

--- a/config.yaml.example
+++ b/config.yaml.example
@@ -8,28 +8,27 @@ app:
     - admin@example.com
     - editor@example.com
 
-# Git repository settings (single-repository mode)
-repository:
-  repo_path: /home/mauro/projects/wikigit/wiki-content
-  default_branch: main
-  auto_push: false
-  remote_url: ""  # Optional: https://github.com/username/repo.git
-  remote_token: ""  # Optional: GitHub personal access token (use ${GITHUB_TOKEN} for env var)
-
 # Search settings
 search:
   index_dir: /home/mauro/projects/wikigit/data/search-index
 
-# Multi-repository settings (optional)
-# Enable this to manage multiple GitHub repositories in one wiki
+# Multi-repository settings
+# WikiGit now uses multi-repository mode exclusively
 multi_repository:
-  enabled: false  # Set to true to enable multi-repository mode
+  enabled: true
 
   # Directory where all repository clones will be stored
   repositories_root_dir: /home/mauro/projects/wikigit/wiki-repositories
 
   # Auto-sync interval in minutes (pulls remote changes, pushes local changes)
   auto_sync_interval_minutes: 15
+
+  # Git commit author settings
+  author_name: WikiGit Bot
+  author_email: bot@wikigit.app
+
+  # Default branch for new repositories
+  default_branch: main
 
   # GitHub integration settings
   github:
