docs: update configuration examples for multi-repo architecture
Updated all example configuration files to reflect the current architecture
where repositories are managed via RepositoryService (repositories.json).

Changes:
- Remove repositories array from YAML examples
- Add clear comments about repository management via API
- Update GitHub integration documentation
- Improve .env.example with better comments and links
- Reorganize config.yaml.example for clarity

All backward compatibility references removed.

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,8 +1,10 @@
-# GitHub token for private repositories (optional)
+# GitHub Personal Access Token (required for cloning/syncing repositories)
+# Create at: https://github.com/settings/tokens
+# Required scopes: repo (private) or public_repo (public only)
 GITHUB_TOKEN=
 
-# Log level
+# Log level (debug, info, warning, error)
 LOG_LEVEL=info
 
-# Ports
+# API server port
 API_PORT=8000
