--- a/apps/config.yaml.example
+++ b/apps/config.yaml.example
@@ -1,5 +1,5 @@
 # WikiGit Configuration File
-# Copy this to config.yaml and customize for your deployment
+# Copy this to ../config.yaml (project root) and customize for your deployment
 
 # Application settings
 app:
@@ -7,15 +7,27 @@ app:
   admins:
     - admin@example.com
     - editor@example.com
-
-# Git repository settings
-repository:
-  repo_path: /home/mauro/projects/wikigit/wiki-content
-  default_branch: main
-  auto_push: false
-  remote_url: ""  # Optional: https://github.com/username/repo.git
-  remote_token: ""  # Optional: GitHub personal access token (use ${GITHUB_TOKEN} for env var)
+  # Optional: Configure home page
+  # home_page_repository: owner/repo-name
+  # home_page_article: Home.md
 
 # Search settings
 search:
-  index_dir: /home/mauro/projects/wikigit/data/search-index
+  index_dir: ./data/search-index
+
+# Multi-repository settings
+multi_repository:
+  enabled: true
+  repositories_root_dir: ./wiki-repositories
+  auto_sync_interval_minutes: 15
+  author_name: WikiGit Bot
+  author_email: bot@wikigit.app
+  default_branch: main
+
+  # GitHub integration (optional, for private repos)
+  github:
+    token_env_var: GITHUB_TOKEN
+    user_id: your-github-username
+
+  # Repositories are managed via API and stored in:
+  # {repositories_root_dir}/config/repositories.json
